log
Fri 11 Mar 2022 02:07:26 PM UTC: 
In file included from test.c:5:
sudoku.c: In function ‘read_file’:
sudoku.c:27:11: error: ignoring return value of ‘fscanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   27 |           fscanf (file, "%d", &n->sudo[i][j]);
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc22477
